<resources>
    <string name="app_name">Ultra Wallet</string>

    <!-- Common strings -->
    <string name="content_description_up_button">Botão para voltar</string>
    <string name="money_mask">R$ %1$s</string>

    <!-- Welcome activity -->
    <string name="content_description_profile_image">Imagem de perfil</string>
    <string name="send_money_button">Enviar dinheiro</string>
    <string name="historic_button">Histórico</string>

    <!-- Contacts activithy -->
    <string name="content_description_contact_image">Imagem do contato</string>
    <string name="content_description_dialog_close">Fechar diálogo</string>
    <string name="send_money_activity_title">Enviar dinheiro</string>
    <string name="label_amount_to_send">Valor a enviar:</string>
    <string name="send_money_button_send">Enviar</string>
    <string name="send_money_success">Dinheiro enviado com sucesso</string>
    <string name="send_money_empty_value_error">Eita, você esqueceu de digitar o valor a ser enviado</string>

    <!-- Historic Activity -->
    <string name="historic_activity_title">Histórico de eventos</string>
    <string name="historic_empty_list">Poxa, você ainda não enviou dinheiro pra nenhum contato</string>
    <string name="historic_error_getting_list">Opa, não foi possível se comunicar com a nuvem</string>

</resources>
