<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.diegomalone.neontest.activity.WelcomeActivity"
    tools:showIn="@layout/activity_welcome">

    <ImageView
        android:id="@+id/profile_image_view"
        android:layout_width="@dimen/profile_image_size"
        android:layout_height="@dimen/profile_image_size"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/content_description_profile_image"
        android:src="@drawable/profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_view"
        tools:text="Diego Malone" />

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/send_money_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_view"
        app:layout_constraintVertical_bias="0.018"
        tools:text="diegomalone@gmail.com" />

    <Button
        android:id="@+id/send_money_button"
        android:layout_width="184dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/send_money_button"
        app:layout_constraintBottom_toTopOf="@+id/historic_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/historic_button"
        android:layout_width="179dp"
        android:layout_height="45dp"
        android:layout_marginBottom="54dp"
        android:text="@string/historic_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
