<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/content_description_dialog_close"
        android:padding="8dp"
        android:src="@drawable/ic_close_white_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/contact_profile_view"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/content_description_contact_image"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="1dp"
            tools:src="@drawable/profile" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:maxLines="2"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            tools:text="Walter White Walter" />

        <TextView
            android:id="@+id/phone_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/text_medium"
            tools:text="(505) 737-0000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/label_amount_to_send"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/text_small" />

        <EditText
            android:id="@+id/value_to_send_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_edit_text"
            android:gravity="center"
            android:inputType="number"
            android:textColor="@color/accentText"
            android:textSize="@dimen/text_huge"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/send_money_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ripple_button"
                android:elevation="1dp"
                android:text="@string/send_money_button_send"
                android:textAllCaps="true"
                android:layout_marginBottom="8dp"
                android:textColor="@color/primaryText" />

            <com.diegomalone.neontest.views.UltraLoading
                android:id="@+id/loading"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignBottom="@id/send_money_button"
                android:layout_alignTop="@id/send_money_button"
                android:layout_centerHorizontal="true"
                android:elevation="2dp"
                android:visibility="gone"
                tools:visibility="visible"/>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>